# PyFAT12

./: LICENSE  README.md  setup.cfg
pyfat12/: __init__.py  floppy.py  fs.py
pyfat12/path/: path.py
