[metadata]
name = PyFAT12
version = 0.8
author = Sampo Hippeläinen (hisahi)
description = A library for reading (from) and writing (to) FAT12 file systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hisahi/PyFAT12
project_urls =
    Bug Tracker = https://github.com/hisahi/PyFAT12/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pyfat12
packages = find:
python_requires = >=3.5

[options.packages.find]
where = pyfat12
